# saefty

./: .gitignore  .gitmodules  README.md  pyproject.toml
experiments/: README.md  analyze_comparison.py  run_50m_multilingual.sh  run_dry_run.sh  run_expansion_ablation.sh  run_fair_comparison.sh  run_fixed_comparison.sh  run_sparsity_ablation.sh  train_gated_sae.py  train_topk_sae.py  train_vanilla_sae.py  upload_to_hf.py  xsafety_layer_probes.py  xsafety_refusal_rates.py
notes/: 50m-training.md  auto-interp-per-lang.md  auto-interpretation.md  baseline.md  feature-identification.md  initial-feature-analysis.md  max-activating-examples.md  max-activating-per-lang.md  rq1.md  sae-feature-analysis.md  sae-implementation-ablations.md
results/: feature_labels.json  features_ranked.json  logit_lens.json  per_lang_combined.json  per_lang_top50.json
results/auto_interp_per_lang/: summary.json
results/auto_interp_per_lang/bengali/: explanations.json
results/auto_interp_per_lang/english/: explanations.json
results/auto_interp_per_lang/french/: explanations.json
results/auto_interp_per_lang/german/: explanations.json
results/auto_interp_per_lang/hindi/: explanations.json
results/auto_interp_per_lang/japanese/: explanations.json
results/auto_interp_per_lang/simplified_chinese/: explanations.json
results/auto_interp_per_lang/spanish/: explanations.json
results/auto_interp_v2/: explanations.json  summary.json
results/interpretability/: interpretability_report.txt  top_activations.json
results/xsafety_layer_probes/: layer_stats.json  probe_results.json
(+664 files in other folders)
