[project]
name = "saefty"
version = "0.1.0"
description = "Safety representations across languages — SAE experiments on multilingual LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformer-lens",
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tensorboard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saefty"]
