[project]
name = "saefty"
version = "0.1.0"
description = "Safety representations across languages — SAE experiments on multilingual LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformer-lens",
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tensorboard",
    "datasets",
    "huggingface-hub",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.2.2",
    "openai>=2.29.0",
    "azure-identity>=1.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saefty"]
